--- a/roi.html
+++ b/roi.html
@@ -1,9 +1,23 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Routes of Interest</title>
+
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="lib/wicket.js" type="text/javascript"></script>
+	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
+	<script src="lib/papaparse.min.js"></script>
 </head>
 <body>
-
+	<header>
+		<h1>Routes of Interest</h1>
+	</header>
+	<div class="wrapper">	
+		<div id="map"></div>
+		<script src="js/main.js"></script>
+	</div>
 </body>
 </html>
