visualise origin and destination points

--- a/roi.html
+++ b/roi.html
@@ -12,12 +12,18 @@
 	<script src="lib/papaparse.min.js"></script>
 </head>
 <body>
-	<header>
-		<h1>Routes of Interest</h1>
-	</header>
 	<div class="wrapper">	
+		<header>
+			<h1>Routes of Interest</h1>
+		</header>
+		
 		<div id="map"></div>
+		
 		<script src="js/main.js"></script>
+
+		<footer>
+			<p>Just some footnotes</p>
+		</footer>
 	</div>
 </body>
 </html>
