--- a/roi.html
+++ b/roi.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="js/map.js"></script>
+	<script src="js/timeline.js"></script>
 	<script src="lib/wicket.js" type="text/javascript"></script>
 	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
 	<script src="lib/papaparse.min.js"></script>
@@ -19,7 +21,8 @@
 		</header>
 
 		<div id="map"></div>
-		
+		<div id="timeline"></div>
+
 		<script src="js/main.js"></script>
 
 		<footer>
