--- a/roi.html
+++ b/roi.html
@@ -13,6 +13,13 @@
 	<script src="lib/wicket.js" type="text/javascript"></script>
 	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
 	<script src="lib/papaparse.min.js"></script>
+
+	<script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
+	<script src='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.js'></script>
+	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css' /> 
+	<!-- <script src="lib/leaflet-routing-machine.js"></script> -->
+
 </head>
 <body>
 	<div class="wrapper">	
