--- a/roi.html
+++ b/roi.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Routes of Interest</title>
 
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-	<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-	<script src="js/map.js"></script>
-	<script src="js/timeline.js"></script>
-	<script src="lib/wicket.js" type="text/javascript"></script>
-	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
-	<script src="lib/papaparse.min.js"></script>
 
-	<script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+	<!-- Leaflet Stylesheet -->
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<!-- Mapbox Stylesheets -->
 	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
-	<script src='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.js'></script>
-	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css' /> 
-	<!-- <script src="lib/leaflet-routing-machine.js"></script> -->
+	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css' />
+
+	<!-- PapaParse to read in csv data -->
+	<script src="lib/papaparse.min.js"></script>
 
 </head>
 <body>
-	<div class="wrapper">	
+	<div class="wrapper">
+
 		<header>
 			<h1>Routes of Interest</h1>
 		</header>
 
-		<div id="map"></div>
-		<div id="timeline"></div>
-
-		<script src="js/main.js"></script>
+		<section>
+			<div id="map"></div>
+			<div id="timeline"></div>
+		</section>
 
 		<footer>
 			<p>Just some footnotes</p>
 		</footer>
+
 	</div>
+
+<!-- ================================================== -->
+
+	<!-- Leaflet for the spatial visualisation -->
+	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
+	<!-- Wicket to convert from WKT coordinates to Leaflet geometry objects -->
+	<script src="lib/wicket.js" type="text/javascript"></script>
+	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
+
+	<!-- D3 for non-spatial visualisation and interaction -->
+	<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+	<!-- Mapbox for routing -->
+	<script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>	<script src='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.js'></script> 
+
+	<!-- my scripts -->
+	<script src="js/map.js"></script>
+	<script src="js/timeline.js"></script>
+	<script src="js/main.js"></script>
+
 </body>
 </html>
