--- a/roi.html
+++ b/roi.html
@@ -15,6 +15,8 @@
 	<!-- Mapbox Stylesheets -->
 	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
 	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css' />
+	<!-- Font-Awesome for Icons -->
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
 
 	<!-- PapaParse to read in csv data -->
 	<script src="lib/papaparse.min.js"></script>
