--- a/roi.html
+++ b/roi.html
@@ -8,7 +8,7 @@
 	<title>Routes of Interest</title>
 
 	<!-- stylesheets -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 
 	<!-- Leaflet Stylesheet -->
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
@@ -18,36 +18,68 @@
 	<!-- Font-Awesome for Icons -->
 	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
 
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
 	<!-- PapaParse to read in csv data -->
-	<script src="lib/papaparse.min.js"></script>
+	<script src="./lib/papaparse.min.js"></script>
 
 </head>
 <body>
-	<div class="wrapper">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">:-)</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="#viz">Visualisation</a></li>
+					<li><a href="#docu">Documentation</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</nav>
 
-		<header>
+	<div id="viz" class="container">
+		<div class="content">
 			<h1>Routes of Interest</h1>
-		</header>
-
-		<section>
 			<div id="map"></div>
 			<div id="timeline"></div>
-		</section>
+		</div>		
+	</div><!-- /.container -->
 
+	<div id="docu" class="container">
+		<h2>Documentation</h2>
+	</div><!-- /.container -->
+
+	<div class="container">
 		<footer>
 			<p>Just some footnotes</p>
 		</footer>
+	</div><!-- /.container -->
+	<!-- ================================================== -->
 
-	</div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<!-- ================================================== -->
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<!-- Leaflet for the spatial visualisation -->
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
 	<!-- Wicket to convert from WKT coordinates to Leaflet geometry objects -->
-	<script src="lib/wicket.js" type="text/javascript"></script>
-	<script src="lib/wicket-leaflet.js" type="text/javascript"></script>
+	<script src="./lib/wicket.js" type="text/javascript"></script>
+	<script src="./lib/wicket-leaflet.js" type="text/javascript"></script>
 
 	<!-- D3 for non-spatial visualisation and interaction -->
 	<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -56,9 +88,9 @@
 	<script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>	<script src='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.js'></script> 
 
 	<!-- my scripts -->
-	<script src="js/map.js"></script>
-	<script src="js/timeline.js"></script>
-	<script src="js/main.js"></script>
+	<script src="./js/map.js"></script>
+	<script src="./js/timeline.js"></script>
+	<script src="./js/main.js"></script>
 
 </body>
 </html>
