--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<p>The page was tested in Chrome, Safari, and Firefox.</p>
 		<p>Work on the JavaScript code... 
 			<ul>
-				<li><mark>filtering markers is super slow. find a better way!</mark></li>
+				<li>after filtering, all routes should show up for that time slot</li>
 				<li>check why CRS won't fit when using EPSG:4326 and WMS layer</li>
 				<li>zoom to selected route. Uncaught TypeError: e.getBounds is not a function ?</li>
 				<li>timeline does not scale correctly on small screens</li>
@@ -100,7 +100,8 @@
 			<ul>
 				<li>handle overlapping markers... clustering?</li>
 				<li>zoom to extend button</li>
-				<li>replace standard A and B icons with custom ones
+				<li>replace standard A and B icons with custom ones</li>
+				<li>buttons to change routing profile</li>
 			</ul>
 		</p>
 
