new markers and map control buttons

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 			<p>Routes requested by users in Berlin during one day in December</p>
 			<div id="map"></div>
 			<!-- TODO: loading data waiting time spinner -->
-<!-- 			<div id="spinner" style="display: none;">
-      			<img src="assets/img/spinner.gif">
+<!-- 		<div id="spinner" style="display: none;">
+      			<i class="fa fa-spinner"></i>
     		</div> -->
+    		<button id="extendbtn" class="btn btn-default" type="submit" title="view extend"><i class="fa fa-arrows-alt"></i>  view extend</button>
+    		<button id="clearbtn" class="btn btn-default" type="submit" title="clear routes"><i class="fa fa-remove"></i>  clear routes</button>
 			<br>
 			<h3>Total number of requests</h3>
 			<div id="timeline"></div>
@@ -102,6 +104,7 @@
 				<li>zoom to extend button</li>
 				<li>replace standard A and B icons with custom ones</li>
 				<li>buttons to change routing profile</li>
+				<li>check out <a href="https://square.github.io/crossfilter/">Crossfilter</a> for fast filtering of large datasets</li>
 			</ul>
 		</p>
 
