--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 	<link rel="stylesheet" href="./css/style.css">
 
 	<!-- Leaflet Stylesheet -->
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css">
 	<!-- Mapbox Stylesheets -->
-	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
-	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css' />
+	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet'>
+	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css'>
+	<!-- MarkerCluster Plugin -->
+	<link href="./lib/markercluster/MarkerCluster.css" rel="stylesheet" type="text/css">
+
 	<!-- Font-Awesome for Icons -->
 	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
-
-	<!-- Latest compiled and minified CSS -->
+	<!-- Latest compiled and minified CSS for Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
+	<!-- Optional theme for Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 	<!-- PapaParse to read in csv data -->
@@ -55,7 +56,7 @@
 			<p>Routes requested by users in Berlin during one day in December</p>
 			<div id="map"></div>
 			<!-- TODO: loading data waiting time spinner -->
-<!-- 		<div id="spinner" style="display: none;">
+			<!-- <div id="spinner" style="display: none;">
       			<i class="fa fa-spinner"></i>
     		</div> -->
     		<button id="extendbtn" class="btn btn-default" type="submit" title="view extend"><i class="fa fa-arrows-alt"></i>  view extend</button>
@@ -75,23 +76,20 @@
 			<li><a href="http://papaparse.com/">Papa Parse</a> to parse the data from csv to json</li>
 			<li><a href="http://arthur-e.github.io/Wicket/">Wicket</a> to transform the coordinates from WKT to json objects containing lat and lon</li>
 			<li><a href="http://leafletjs.com/">Leaflet</a> for the map</li>
-			<li><a href="https://www.mapbox.com/api-documentation/#directions">Mapbox</a> for calculation of routes between the points</li>
+			<li><a href="https://www.mapbox.com/api-documentation/#directions">Mapbox.directions</a> for calculation of routes between the points</li>
 			<li><a href="https://github.com/kartenkarsten/leaflet-layer-overpass">L.OverPassLayer</a> for external data via Overpass API</li>
+			<li><a href="https://github.com/Leaflet/Leaflet.markercluster/tree/leaflet-0.7">Leaflet.markercluster</a> for cluster markers at same location</li>
 			<li><a href="https://d3js.org/">D3</a> for the interactive visualisation</li>
 			<li><a href="http://getbootstrap.com/">Bootstrap</a> for a responsive layout</li>
 		</ul>
 
 		<h3>Testing and Known Bugs</h3>
-		<p>The page was tested in Chrome, Safari, and Firefox.</p>
-		<p>Work on the JavaScript code... 
+		<p>The page was tested in Chrome, Safari, and Firefox as well as on Android.</p>
+		<p>Some bugs are known and not yet fixed:
 			<ul>
-				<li>after filtering, all routes should show up for that time slot</li>
 				<li>check why CRS won't fit when using EPSG:4326 and WMS layer</li>
 				<li>zoom to selected route. Uncaught TypeError: e.getBounds is not a function ?</li>
 				<li>timeline does not scale correctly on small screens</li>
-				<li>understand this: <code>counts[num] = counts[num] ? counts[num]+1 : 1;</code> :) ˙&#13;&#10;
-					AH! <code>a ? b : c</code> --> <code>if a then b else c</code></li>
-				<li>create data object in a format I can use directly in d3.data(), like this: <code>{'key': 0, 'value': 42},...</code></li>
 				<li>...</li>
 			</ul>
 		</p>
@@ -100,10 +98,10 @@
 		<h3>Further Ideas</h3>
 		<p>
 			<ul>
-				<li>handle overlapping markers... clustering?</li>
-				<li>zoom to extend button</li>
+				<li>after filtering, all routes should show up for that time slot</li>
+				<li>select multiple markers at once to show routes</li>
 				<li>replace standard A and B icons with custom ones</li>
-				<li>buttons to change routing profile</li>
+				<li>buttons to change routing profile (driving / cycling / walking)</li>
 				<li>check out <a href="https://square.github.io/crossfilter/">Crossfilter</a> for fast filtering of large datasets</li>
 			</ul>
 		</p>
@@ -151,6 +149,10 @@
 
 	<!-- Overpass API for external data -->
 	<script src="./lib/OverPassLayer.js"></script>
+
+	<!-- MarkerCluster -->
+	<script src="./lib/markercluster/leaflet.markercluster.js"></script>
+	<script src="./lib/markercluster/leaflet.markercluster-src.js"></script>
 
 	<!-- my scripts -->
 	<script src="./js/viz.js"></script>
