--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
 	<!-- Leaflet Stylesheet -->
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css">
-	<!-- Mapbox Stylesheets -->
-	<link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet'>
-	<link href='https://api.mapbox.com/mapbox.js/plugins/mapbox-directions.js/v0.4.0/mapbox.directions.css' rel='stylesheet' type='text/css'>
 	<!-- MarkerCluster Plugin -->
 	<link href="./lib/markercluster/MarkerCluster.css" rel="stylesheet" type="text/css">
 
@@ -24,6 +21,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<!-- Optional theme for Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+	<!-- Theme for jQuery UI -->
+	<!-- <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> -->
 
 	<!-- PapaParse to read in csv data -->
 	<script src="./lib/papaparse.min.js"></script>
@@ -59,8 +58,22 @@
 			<!-- <div id="spinner" style="display: none;">
       			<i class="fa fa-spinner"></i>
     		</div> -->
-    		<button id="extendbtn" class="btn btn-default" type="submit" title="view extend"><i class="fa fa-arrows-alt"></i>  view extend</button>
-    		<button id="clearbtn" class="btn btn-default" type="submit" title="clear routes"><i class="fa fa-remove"></i>  clear routes</button>
+    		<div class="row toolbar">
+	    		<button id="extendbtn" class="btn btn-default col-xs-4 col-sm-4 col-md-4 col-lg-4" type="submit" title="expand view"><i class="fa fa-arrows-alt"></i>  expand view</button>
+	    		<button id="clearbtn" class="btn btn-default col-xs-4 col-sm-4 col-md-4 col-lg-4" type="submit" title="clear routes" disabled="disabled"><i class="fa fa-remove"></i>  clear routes</button>
+	    		<div class="row toolbar">
+	    			<p>Marker visibility:</p>
+	    			<div class="btn-group col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right" role="group" data-toggle="buttons">
+	    			<label id="onbtn" class="btn btn-default btn-xs active">
+	    				<input type="radio" name="options" autocomplete="off" checked> on
+	    			</label>
+	    			<label id="offbtn" class="btn btn-default btn-xs">
+	    				<input type="radio" name="options" autocomplete="off"> off
+	    			</label>
+					</div>
+				</div>
+    		</div>
+
 			<br>
 			<h3>Total number of requests</h3>
 			<div id="timeline"></div>
@@ -127,8 +140,9 @@
 
 	<!-- ================================================== -->
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins and slider) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script> -->
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
